# realty

./: .coverage  .gitignore  README.md  pyproject.toml  viewer.html
.claude/skills/real-estate-declutter/: SKILL.md  phases.json
.claude/skills/real-estate-declutter/prompts/: phase1_broad.md  phase2_surgical.md  review_rubric.md
.claude/skills/virtual-staging/: SKILL.md  phases.json
.claude/skills/virtual-staging/prompts/: phase1_generate.md  phase2_refine.md  review_rubric.md
src/pipeline/: __init__.py  agent.py  config.py  contracts.py  errors.py  images.py  manifest.py  narration.py  phase_catalog.py
src/pipeline/capabilities/: __init__.py  execute.py  plan.py  plan_next.py  verify.py
src/pipeline/cli/: declutter.py  edit.py  plan.py  review.py  stage.py
tests/integration/: test_end_to_end.py
tests/unit/: test_capabilities_mocked.py  test_contracts.py  test_manifest.py  test_narration.py  test_stage_cli.py
